Add bids microservice to the mix

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 USERS_URI="http://localhost:4001"
 AUCTIONS_URI="http://localhost:4002"
 TOURNAMENTS_URI="http://localhost:4003"
+BIDS_URI="http://localhost:4004"
